--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.uuid</groupId>
+		    <artifactId>java-uuid-generator</artifactId>
+		    <version>3.1.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- <finalName>${artifactId}</finalName> -->
