--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 		    <artifactId>java-uuid-generator</artifactId>
 		    <version>3.1.4</version>
 		</dependency>
+		<dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>4.2.2</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<!-- <finalName>${artifactId}</finalName> -->
